add page object open;

--- a/app/object.html
+++ b/app/object.html
@@ -15,7 +15,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
   <body class="object-body">
-    <!--POPUP START -->
+    <!--INFO START -->
     <div class="object-info">
       <div class="object-info__icon">
         <svg>
@@ -24,7 +24,7 @@
       </div>
       <div class="object-info__link"><a href="#">Важная информация</a></div>
     </div>
-    <!--POPUP END-->
+    <!--INFO END-->
     <!--SIDEBAR-->
     <div class="sidebar">
       <div class="sidebar-content">
@@ -123,7 +123,7 @@
             <div class="item"><a class="item__headline link--active" href="#">ЖК "На Сенной"</a>
               <p class="item__info">Полтава, ул. Сенная, 19</p>
               <p class="item__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
-              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="#">
+              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="object-opened.html">
                   <div class="arrow-btn__icon">
                     <svg class="icon">
                       <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
